[FIX] website: increase 'toggleDeviceVisibility' option breakpoint
When using the 'toggleDeviceVisibility' option, we can see that there is
a mismatch between the screen breakpoint at which the elements are
displayed like in mobile view (=> under 992px or `lg`) and the one that
is impacted by the 'Hide/Show' option (=> at 768px or `md`). This is
a problem because between these two breakpoints, the display is like in
mobile view but is not considered as such and so, hiding/showing an
element in the mobile/desktop view (for example, if it does not look
good in one of them) has no effect until the screen reaches 768px.

This commit increases the screen breakpoint at which the 'toggleDevice-
Visibility' option is applied, that is, at 992px instead of 768px, in
order to be consistent with the display.

task-3110770

X-original-commit: b062b280fdadcde857fff4f7a57876da50542cb3

--- a/addons/website/static/src/scss/website.wysiwyg.scss
+++ b/addons/website/static/src/scss/website.wysiwyg.scss
@@ -55,11 +55,11 @@ html[data-edit_translations="1"] {
         font-size: 0px;
         content: "."; // Content is mandatory.
     }
-    &.d-md-none::before {
+    &.d-md-none::before, &.d-lg-none::before {
         height: 50px;
         -webkit-mask: url("/website/static/src/img/snippets_options/desktop_invisible.svg") no-repeat 100% 100%;
     }
-    &:not(.d-md-none)::before {
+    &:not(.d-md-none):not(.d-lg-none)::before {
         height: 30px;
         -webkit-mask: url("/website/static/src/img/snippets_options/mobile_invisible.svg") no-repeat 100% 100%;
     }
